[gd_scene load_steps=10 format=3 uid="uid://cei8wnkygsihh"]

[ext_resource type="Theme" uid="uid://dqk3bpubsidfh" path="res://Assets/GUI/theme_1.tres" id="1_jrg1e"]
[ext_resource type="Script" path="res://Scenes/GUI/LevelGUI.gd" id="1_wdns4"]
[ext_resource type="Texture2D" uid="uid://dqhn4frrmsfmb" path="res://Assets/Coins/Coin.png" id="2_4xlsm"]
[ext_resource type="Script" path="res://Scenes/Level/UpgradeContainer.gd" id="3_vjp5a"]
[ext_resource type="Texture2D" uid="uid://w51wklgig7tt" path="res://Assets/GUI/back_button.png" id="4_ehq87"]

[sub_resource type="LabelSettings" id="LabelSettings_ry1ex"]
font_size = 8
shadow_size = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jx5l8"]

[sub_resource type="InputEventKey" id="InputEventKey_gthan"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_ciqjb"]
events = [SubResource("InputEventKey_gthan")]

[node name="LevelGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wdns4")

[node name="ScoreLabel" type="Label" parent="."]
self_modulate = Color(1, 0.380392, 0.313726, 1)
layout_mode = 0
offset_left = 17.0
offset_top = 3.0
offset_right = 77.0
offset_bottom = 14.0
theme = ExtResource("1_jrg1e")
text = "Score: 0
"
label_settings = SubResource("LabelSettings_ry1ex")

[node name="ScoreTimer" type="Timer" parent="ScoreLabel"]
wait_time = 0.1
autostart = true

[node name="CoinLabel" type="Label" parent="."]
self_modulate = Color(1, 0.380392, 0.313726, 1)
layout_mode = 0
offset_left = 36.0
offset_top = 18.0
offset_right = 84.0
offset_bottom = 29.0
theme = ExtResource("1_jrg1e")
text = "0
"
label_settings = SubResource("LabelSettings_ry1ex")

[node name="HiScoreLabel" type="Label" parent="."]
self_modulate = Color(1, 0.380392, 0.313726, 1)
layout_mode = 0
offset_left = 184.0
offset_top = 3.0
offset_right = 303.0
offset_bottom = 26.0
theme = ExtResource("1_jrg1e")
theme_override_font_sizes/font_size = 4
text = "Hi Score: 0
"
label_settings = SubResource("LabelSettings_ry1ex")
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.65098, 0.517647, 0.364706, 1)
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 33.0
offset_bottom = 31.0
texture = ExtResource("2_4xlsm")

[node name="DeadGui" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="RestartButton" type="Button" parent="DeadGui"]
self_modulate = Color(0.603922, 0.34902, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 3.4
anchor_bottom = 0.7
offset_left = 68.0
offset_top = 65.0
offset_right = 132.0
offset_bottom = 75.0
theme = ExtResource("1_jrg1e")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxEmpty_jx5l8")
disabled = true
action_mode = 0
shortcut = SubResource("Shortcut_ciqjb")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Restart?"
flat = true

[node name="UpgradeButton" type="Button" parent="DeadGui"]
self_modulate = Color(0.603922, 0.34902, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 3.4
anchor_bottom = 0.7
offset_left = 63.0
offset_top = 99.0
offset_right = 255.0
offset_bottom = 129.0
theme = ExtResource("1_jrg1e")
theme_override_font_sizes/font_size = 16
disabled = true
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Upgrades"
flat = true

[node name="MainMenuButton" type="Button" parent="DeadGui"]
self_modulate = Color(0.603922, 0.34902, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 3.4
anchor_bottom = 0.7
offset_left = 61.0
offset_top = 153.0
offset_right = 253.0
offset_bottom = 183.0
theme = ExtResource("1_jrg1e")
theme_override_font_sizes/font_size = 16
disabled = true
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Main Menu"
flat = true

[node name="UpgradeGui" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradeContainer" type="HBoxContainer" parent="UpgradeGui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 57.0
offset_right = 236.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jrg1e")
alignment = 1
script = ExtResource("3_vjp5a")

[node name="UpgradeBackButton" type="Button" parent="UpgradeGui"]
self_modulate = Color(0.50974, 0.333475, 0.165109, 1)
layout_mode = 0
offset_left = 82.0
offset_top = 27.0
offset_right = 93.0
offset_bottom = 38.0
theme = ExtResource("1_jrg1e")
disabled = true
action_mode = 0
icon = ExtResource("4_ehq87")

[connection signal="timeout" from="ScoreLabel/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="pressed" from="DeadGui/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="DeadGui/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="DeadGui/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="refresh_coin_count" from="UpgradeGui/UpgradeContainer" to="." method="_on_upgrade_container_refresh_coin_count"]
[connection signal="pressed" from="UpgradeGui/UpgradeBackButton" to="." method="_on_upgrade_back_button_pressed"]
